// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SwitchBaseInputField> should render correctly when is disabled 1`] = `
.c0 {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
  left: 0;
  top: 0;
  margin: 0;
  padding: 0;
}

<input
  className="c0"
  disabled={true}
/>
`;

exports[`<SwitchBaseInputField> should render correctly with default props 1`] = `
.c0 {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
  left: 0;
  top: 0;
  margin: 0;
  padding: 0;
}

<input
  className="c0"
/>
`;
